infra/sf-fixture/force-app/main/default/objects/Lease__c/Lease__c.object-meta.xml
<CustomObject>
    <description>A lease on a Property. Master-detail child of Property__c.</description>
    <label>Lease</label>
    <nameField>
        <displayFormat>LEASE-{00000}</displayFormat>
        <label>Lease Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>