infra/sf-fixture/force-app/main/default/objects/Lease__c/fields/Effective_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Effective_Annual_Rent__c</fullName>
    <formula>Monthly_Rent__c * 12 * BLANKVALUE(Property__r.Occupancy_Rate__c, 100) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>