infra/sf-fixture/force-app/main/default/objects/Lease__c/fields/Last_Handler_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Handler_Run__c</fullName>
    <label>Last Handler Run</label>
    <type>DateTime</type>
</CustomField>