infra/sf-fixture/force-app/main/default/objects/Lease__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent__c</fullName>
    <label>Monthly Rent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>